# simple_ollama_rag

./: .gitignore  __init__.py  example.py  example1.py  inference_tools.py  pyproject.toml  readme.md  requirements.txt  setup.py  tools.py  vectordb_tools.py
db/: chroma.sqlite3
rag_data/: aquaculture_of_salmonids.txt  environmental_issues_with_salmon.txt  salmon.txt  salmon_run.txt
simple_ollama_rag/: __init__.py  inference_tools.py  pyproject.toml  readme.md  tools.py  vectordb_tools.py
