[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple_ollama_rag"
version = "0.1.0"
dependencies = [
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "anyio",
    "asgiref",
    "async-timeout",
    "attrs",
    "backoff",
    "bcrypt",
    "build",
    "cachetools",
    "certifi",
    "charset-normalizer",
    "chroma-hnswlib",
    "chromadb",
    "click",
    "coloredlogs",
    "dataclasses-json",
    "Deprecated",
    "exceptiongroup",
    "fastapi",
    "filelock",
    "flatbuffers",
    "frozenlist",
    "fsspec",
    "google-auth",
    "googleapis-common-protos",
    "greenlet",
    "grpcio",
    "h11",
    "httpcore",
    "httptools",
    "httpx",
    "huggingface-hub",
    "humanfriendly",
    "idna",
    "importlib-metadata",
    "importlib-resources",
    "jsonpatch",
    "jsonpointer",
    "kubernetes",
    "langchain-community",
    "langchain-core",
    "langsmith",
    "marshmallow",
    "mmh3",
    "monotonic",
    "mpmath",
    "multidict",
    "mypy-extensions",
    "numpy",
    "oauthlib",
    "ollama",
    "onnxruntime",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-proto",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "opentelemetry-util-http",
    "orjson",
    "overrides",
    "packaging",
    "posthog",
    "protobuf",
    "pulsar-client",
    "pyasn1",
    "pyasn1-modules",
    "pydantic",
    "pydantic_core",
    "PyPika",
    "pyproject_hooks",
    "python-dateutil",
    "python-dotenv",
    "PyYAML",
    "requests",
    "requests-oauthlib",
    "rsa",
    "semantic-text-splitter",
    "six",
    "sniffio",
    "SQLAlchemy",
    "starlette",
    "sympy",
    "tenacity",
    "tokenizers",
    "tomli",
    "tqdm",
    "typer",
    "typing-inspect",
    "typing_extensions",
    "urllib3",
    "uvicorn",
    "uvloop",
    "watchfiles",
    "websocket-client",
    "websockets",
    "wrapt",
    "yarl",
    "zipp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/linkage001/simple_ollama_rag"