[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple_ollama_rag"
version = "0.1.1"
dependencies = [
    "chromadb",
    "huggingface-hub",
    "langchain-community",
    "langchain-core",
    "ollama",
    "semantic-text-splitter",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/linkage001/simple_ollama_rag"
